# HaiClaude-linux-qt6

./: .gitignore  CLAUDE.md  CMakeLists.txt  LauncherWindow.cpp  LauncherWindow.h  README.md  build-appimage.sh  haiclaude.desktop  main.cpp  resources.qrc
